tests/ui/cve/cve_2021_25905/greedy.regular.stderr
error: it violates the precondition of `std::slice::from_raw_parts_mut` to create a slice from uninitialized part of a `Vec`
  --> tests/ui/cve/cve_2021_25905/greedy.rs:37:13
   |
LL |         let b = self.buf.len();
   |                 -------------- slice created with this length
...
LL |             std::slice::from_raw_parts_mut(self.buf.as_mut_ptr().add(b), self.buf.capacity() - b)
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |                              |
   |             |                              slice created with this pointer
   |             slice created here
   |
   = help: See https://doc.rust-lang.org/std/slice/fn.from_raw_parts_mut.html#safety
   = note: `#[deny(rpl::slice_from_raw_parts_uninitialized)]` on by default

error: aborting due to 1 previous error

